# bubbles-soffit

./: .env  .env.example  LICENSE  astro.config.mjs  check-ip-data.js  check-logs-table.js  check-table.js  create-database.js  debug-logs-query.js  init-security-db.js  init-security-db.mjs  package-lock.json  package.json  tailwind.config.mjs  test-correlation.js  test-db-connection.mjs  test-db-logs.js  test-db.js  test-history.js  test-logs-functionality.js  test-mysql.js  test-soar.js  test-table-structure.js  test-threat-intelligence.js  test-ueba.js  test_pagination.cjs  tsconfig.json
.astro/: settings.json
data/: bubbles_enterprise.db
database/: create_error_logs_table.sql  create_security_tables.js  security_logs_table.sql  security_tables.sql
docs/: ARQUITETURA.md  DESIGN-SYSTEM.md  GROK-INTEGRATION.md  MODERN-DASHBOARD-2025.md  NOVO-PROMPT-GROK.md  README.md  RUST-CALCULATOR.md
playwright-report/: index.html
public/: robots.txt  sitemap.xml  test-logs-manual.html
src/rust-calculator/: Cargo.toml
src/rust-calculator/src/: calculator.rs  constants.rs  lib.rs  types.rs  utils.rs
test-results/: .last-run.json
testsprite_tests/: TC002_Navigation_System_Functionality.py  TC003_Interactive_Cost_Calculator_Accuracy_and_Performance.py  TC003_Services_Pages_Content_and_Links_Verification.py  TC004_Interactive_Cost_Calculator_Normal_Flow.py  TC007_Quote_Request_Form_Validation___Error_Conditions.py  TC007_SEO_Verification_and_Schema_Markup.py  TC008_Accessibility_Compliance_to_WCAG_2.1_AA.py  TC009_Image_Gallery_Performance_and_Usability.py  (+9 more)
(+124 files in other folders)
