[package]
name = "soffit-calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
web-sys = "0.3"

[dependencies.wasm-bindgen]
version = "0.2"
features = [
  "serde-serialize",
]

[profile.release]
opt-level = "s"  # Otimizar para tamanho
lto = true       # Link Time Optimization
codegen-units = 1
panic = "abort"